--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 		<canvas class="canvas" width="1260" height="615"></canvas>
 		<audio src="hoho.mp3" autoplay="autoplay"></audio>
 		<audio src="rire.mp3" id="audio"></audio>
-	
-		<script src="raf.polyfill.js"></script>
-		<script src="script.js"></script>
+
+		<script src="scripts/raf.polyfill.js"></script>
+		<script src="scripts/script.js"></script>
 
 	</body>
 </html>
